--- a/client/app/gradebook/gradebook.template.html
+++ b/client/app/gradebook/gradebook.template.html
@@ -1,3 +1,19 @@
-<main>
-{{gradebook.message}}
-</main>
+<table>
+  <thead>
+    <th></th>
+    <th></th>
+    <th ng-repeat="(testName, testInfo) in gradebook.tests">{{ testName }}</th>
+  </thead>
+  <tbody>
+    <tr>
+      <td></td>
+      <td></td>
+      <td ng-repeat="(testName, testInfo) in gradebook.tests">{{ gradebook.getAverage(testInfo.scores) }}</td>
+    </tr>
+    <tr ng-repeat="(student, studentInfo) in gradebook.students">
+      <td>{{ studentInfo.firstName }}</td>
+      <td>{{ gradebook.getAverage(studentInfo.scores) }}</td>
+      <td ng-repeat="(testName, testScore) in studentInfo.scores">{{ testScore }}</td>
+    </tr>
+  </tbody>
+</table>
