--- a/client/index.html
+++ b/client/index.html
@@ -12,5 +12,6 @@
   </div>
   <script src="./app/app.js"></script>
   <script src="./app/gradebook/gradebook.controller.js"></script>
+  <script src="./app/gradebook/gradebook.factory.js"></script>
 </body>
 </html>
